--- a/views/questionaire.ejs
+++ b/views/questionaire.ejs
@@ -64,6 +64,49 @@
     <div class="content-wrapper">
       <div class="content-header row">
         <div class="content-header-left col-md-6 col-lg-8 col-xs-10 mb-3">
+          <% if (login == 1) {%>
+          <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+            aria-hidden="true" data-backdrop="static">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title" align="center" id="myModalLabel">请先登录</h4>
+                </div>
+                <div class="modal-body">
+                  <form class="form-horizontal form-simple" novalidate="">
+                    <fieldset class="form-group position-relative has-icon-left mb-1">
+                      <input class="form-control form-control-lg input-lg" id="user-name" required="" type="text"
+                        placeholder="Your Username">
+                      <div class="form-control-position">
+                        <i class="icon-head"></i>
+                      </div>
+                    </fieldset>
+                    <fieldset class="form-group position-relative has-icon-left">
+                      <input class="form-control form-control-lg input-lg" id="user-password" required=""
+                        type="password" placeholder="Enter Password">
+                      <div class="form-control-position">
+                        <i class="icon-key3"></i>
+                      </div>
+                    </fieldset>
+                    <fieldset class="form-group row">
+                      <div class="col-md-6 col-xs-12 text-xs-center text-md-left">
+                        <fieldset>
+                          <input class="chk-remember" id="remember-me" type="checkbox">
+                          <label for="remember-me"> 记住密码</label>
+                        </fieldset>
+                      </div>
+                      <div class="col-md-6 col-xs-12 text-xs-center text-md-right"><a class="text-success card-link"
+                          href="/account/resetpwd">忘记密码?</a></div>
+                    </fieldset>
+                    <button class="btn btn-success btn-doc-header btn-lg btn-block" id="login-btn" type="button"><i
+                        class="icon-unlock2"></i>
+                      登陆</button>
+                  </form>
+                </div>
+              </div><!-- /.modal-content -->
+            </div><!-- /.modal -->
+          </div>
+          <% } %>
         </div>
       </div>
       <div class="content-body">
@@ -72,9 +115,10 @@
           <div class="col-xs-12 col-md-10 col-lg-8 offset-md-1 offset-xs-0 offset-lg-2">
             <div class="card">
               <div class="card-header">
-                <h4 class="card-title" align="center" ><%= questionaire[0].title %></h4>
+                <h4 class="card-title" align="center"><%= questionaire[0].title %></h4>
                 <br />
-                <h6 class="card-subtitle mb-1 text-muted" align="center"><em><%= questionaire[0].description %></em></h6>
+                <h6 class="card-subtitle mb-1 text-muted" align="center"><em><%= questionaire[0].description %></em>
+                </h6>
               </div>
               <div class="card-body collapse in" aria-expanded="true">
                 <div class="card-block">
@@ -98,99 +142,101 @@
                           <% for (var i = 0; i < details.length; i++) { %>
                           <% if (details[i].ischild == 0) {%>
                           <div class="form-group <%= details[i].id %>">
-                          <% } else {%>
-                          <div class="form-group child <%= details[i].id %>">
-                          <% }%>
-                            <% if (details[i].type == 0) {%>
-                            <label for="eventInput4"><%= details[i].title %></label>
-                            <div class="input-group" id="<%= details[i].id %>">
-                              <label class="display-inline-block custom-control custom-radio ml-1">
-                                <input type="radio" name="<%= details[i].id %>" name="customer1" value="1"
-                                  class="custom-control-input yes" id = "<%= details[i].childyes %>|<%= details[i].childno %>">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description ml-0">&nbsp是</span>
-                              </label>
-                              <br />
-                              <label class="display-inline-block custom-control custom-radio ml-1">
-                                <input type="radio" name="<%= details[i].id %>" name="customer1" value="0"
-                                  class="custom-control-input no" id = "<%= details[i].childno %>|<%= details[i].childyes %>">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description ml-0">&nbsp否</span>
-                              </label>
-                              <br />
-                            </div>
-                            <% } else if (details[i].type == 1) {%>
-                            <label for="eventInput4"><%= details[i].title %></label>
-                            <div class="input-group" id="<%= details[i].id %>">
-                              <% var choice = strip(details[i].description) %>
-                              <% for (var m = 0; m < choice.length; m++) { %>
-                              <label class="display-inline-block custom-control custom-radio ml-1">
-                                <input type="radio" name="<%= details[i].id %>" name="customer1" value="<%= m+1 %>"
-                                  class="custom-control-input">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description ml-0"><%= choice[m]%></span>
-                              </label>
-                              <br />
-                              <% } %>
-                            </div>
-                            <!-- 多选 -->
-                            <% } else if (details[i].type == 2) {%>
-                            <label for="eventInput4"> <%= details[i].title %></label>
-                            <div class="input-group" id="<%= details[i].id %>">
-                              <% var choice = strip(details[i].description) %>
-                              <% for (var m = 0; m < choice.length; m++) { %>
-                              <label class="display-inline-block custom-control custom-checkbox ml-1">
-                                <input type="checkbox" name="<%= details[i].id %>" name="customer1" value="<%= m+1 %>"
-                                  class="custom-control-input">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description ml-0"><%= choice[m]%></span>
-                              </label>
-                              <br />
-                              <% } %>
-                            </div>
-                            <!-- 单行文本 -->
-                            <% } else if (details[i].type == 3) {%>
-                            <label for="eventInput4"> <%= details[i].title %></label>
-                            <input type="text" id="question<%= i+1 %>" class="form-control" placeholder="请输入"
-                              name="<%= details[i].id %>">
-                            <!-- 多行文本 -->
-                            <% } else if (details[i].type == 4){ %>
-                            <label for="eventInput4"> <%= details[i].title %></label>
-                            <br />
-                            <textarea rows="5" type="text" id="question<%= i+1 %>" class="form-control"
-                              placeholder="请输入" name="<%= details[i].id %>"></textarea>
-                            <!-- 数字 -->
-                            <% } else if (details[i].type == 5){ %>
-                            <label for="eventInput1"> <%= details[i].title %></label>
-                            <input type="number" id="question<%= i+1 %>" class="form-control" placeholder="请输入"
-                              name="<%= details[i].id %>">
-                            <!-- 小数 -->
-                            <% } else if (details[i].type == 6){ %>
-                            <label for="eventInput1"><%= details[i].title %></label>
-                            <input type="number" step="<%= details[i].description %>" id="question<%= i+1 %>"
-                              class="form-control" placeholder="请输入" name="<%= details[i].id %>">
-                            <!-- 评分 -->
-                            <% } else if (details[i].type == 7){ %>
-                            <label for="eventInput1"> <%= details[i].title %></label>
-                            <table class="table table-hover " width="90%" cellspacing="0" cellpadding="2">
-                              <thead></thead>
-                              <tbody>
-                                <% for (var j = 1; j <= trans(details[i].description); j++) { %>
-                                <th><%= j %></th>
+                            <% } else {%>
+                            <div class="form-group child <%= details[i].id %>">
+                              <% }%>
+                              <% if (details[i].type == 0) {%>
+                              <label for="eventInput4"><%= details[i].title %></label>
+                              <div class="input-group" id="<%= details[i].id %>">
+                                <label class="display-inline-block custom-control custom-radio ml-1">
+                                  <input type="radio" name="<%= details[i].id %>" name="customer1" value="1"
+                                    class="custom-control-input yes"
+                                    id="<%= details[i].childyes %>|<%= details[i].childno %>">
+                                  <span class="custom-control-indicator"></span>
+                                  <span class="custom-control-description ml-0">&nbsp是</span>
+                                </label>
+                                <br />
+                                <label class="display-inline-block custom-control custom-radio ml-1">
+                                  <input type="radio" name="<%= details[i].id %>" name="customer1" value="0"
+                                    class="custom-control-input no"
+                                    id="<%= details[i].childno %>|<%= details[i].childyes %>">
+                                  <span class="custom-control-indicator"></span>
+                                  <span class="custom-control-description ml-0">&nbsp否</span>
+                                </label>
+                                <br />
+                              </div>
+                              <% } else if (details[i].type == 1) {%>
+                              <label for="eventInput4"><%= details[i].title %></label>
+                              <div class="input-group" id="<%= details[i].id %>">
+                                <% var choice = strip(details[i].description) %>
+                                <% for (var m = 0; m < choice.length; m++) { %>
+                                <label class="display-inline-block custom-control custom-radio ml-1">
+                                  <input type="radio" name="<%= details[i].id %>" name="customer1" value="<%= m+1 %>"
+                                    class="custom-control-input">
+                                  <span class="custom-control-indicator"></span>
+                                  <span class="custom-control-description ml-0"><%= choice[m]%></span>
+                                </label>
+                                <br />
                                 <% } %>
-                                <tr>
-                                  <% for (var k = 1; k <= trans(details[i].description); k++) { %>
-                                  <td><input type="radio" value="<%= k %>" name="<%= details[i].id %>"></td>
+                              </div>
+                              <!-- 多选 -->
+                              <% } else if (details[i].type == 2) {%>
+                              <label for="eventInput4"> <%= details[i].title %></label>
+                              <div class="input-group" id="<%= details[i].id %>">
+                                <% var choice = strip(details[i].description) %>
+                                <% for (var m = 0; m < choice.length; m++) { %>
+                                <label class="display-inline-block custom-control custom-checkbox ml-1">
+                                  <input type="checkbox" name="<%= details[i].id %>" name="customer1" value="<%= m+1 %>"
+                                    class="custom-control-input">
+                                  <span class="custom-control-indicator"></span>
+                                  <span class="custom-control-description ml-0"><%= choice[m]%></span>
+                                </label>
+                                <br />
+                                <% } %>
+                              </div>
+                              <!-- 单行文本 -->
+                              <% } else if (details[i].type == 3) {%>
+                              <label for="eventInput4"> <%= details[i].title %></label>
+                              <input type="text" id="question<%= i+1 %>" class="form-control" placeholder="请输入"
+                                name="<%= details[i].id %>">
+                              <!-- 多行文本 -->
+                              <% } else if (details[i].type == 4){ %>
+                              <label for="eventInput4"> <%= details[i].title %></label>
+                              <br />
+                              <textarea rows="5" type="text" id="question<%= i+1 %>" class="form-control"
+                                placeholder="请输入" name="<%= details[i].id %>"></textarea>
+                              <!-- 数字 -->
+                              <% } else if (details[i].type == 5){ %>
+                              <label for="eventInput1"> <%= details[i].title %></label>
+                              <input type="number" id="question<%= i+1 %>" class="form-control" placeholder="请输入"
+                                name="<%= details[i].id %>">
+                              <!-- 小数 -->
+                              <% } else if (details[i].type == 6){ %>
+                              <label for="eventInput1"><%= details[i].title %></label>
+                              <input type="number" step="<%= details[i].description %>" id="question<%= i+1 %>"
+                                class="form-control" placeholder="请输入" name="<%= details[i].id %>">
+                              <!-- 评分 -->
+                              <% } else if (details[i].type == 7){ %>
+                              <label for="eventInput1"> <%= details[i].title %></label>
+                              <table class="table table-hover " width="90%" cellspacing="0" cellpadding="2">
+                                <thead></thead>
+                                <tbody>
+                                  <% for (var j = 1; j <= trans(details[i].description); j++) { %>
+                                  <th><%= j %></th>
                                   <% } %>
-                                </tr>
-                              </tbody>
-                            </table>
+                                  <tr>
+                                    <% for (var k = 1; k <= trans(details[i].description); k++) { %>
+                                    <td><input type="radio" value="<%= k %>" name="<%= details[i].id %>"></td>
+                                    <% } %>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <% } %>
+                            </div>
                             <% } %>
                           </div>
-                          <% } %>
                         </div>
                       </div>
-                    </div>
                   </form>
                 </div>
 
@@ -198,9 +244,10 @@
 
               <div class="card-footer">
                 <div class="form-actions center">
-                      <button type="button" class="btn btn-primary float-xs-right" questionaire="<%= questionaire[0].id %>"id="submit">
-                        <i class="icon-check2"></i> 提交
-                      </button>
+                  <button type="button" class="btn btn-primary float-xs-right" questionaire="<%= questionaire[0].id %>"
+                    id="submit">
+                    <i class="icon-check2"></i> 提交
+                  </button>
                 </div>
               </div>
             </div>
@@ -236,18 +283,19 @@
   <script type="text/javascript">
     $(document).ready(function () {
       $(".child").hide();
+      $('#login').modal("show");
     });
     $(".yes").click(function () {
       var id = $(this).attr("id").split("|");
-      var yes = "."+id[0];
-      var no =  "."+id[1];
+      var yes = "." + id[0];
+      var no = "." + id[1];
       $(yes).show();
       $(no).hide();
     });
     $(".no").click(function () {
       var id = $(this).attr("id").split("|");
-      var yes = "."+id[1];
-      var no =  "."+id[0];
+      var yes = "." + id[1];
+      var no = "." + id[0];
       $(no).show();
       $(yes).hide();
     });
@@ -270,6 +318,38 @@
           else if (data.status == -1) {
             alert("未知错误");
           }
+        }
+      });
+    });
+    $("#login-btn").click(function () {
+      let username = $("#user-name").val();
+      let password = $("#user-password").val();
+      $.ajax({
+        dataType: "JSON",
+        data: {
+          username: username,
+          password: password
+        },
+        url: "/questionaire/login",
+        type: "POST",
+        success: function (data) {
+          if (data.status == 1) {
+            alert("登陆成功");
+            sessionStorage.setItem('loggedIn', true);
+            window.location.reload();
+          }
+          else if (data.status == 0) {
+            alert("请检查您的账号与密码是否匹配");
+          }
+          else if (data.status == -1) {
+            alert("服务器错误");
+          }
+          else {
+            alert("未知错误");
+          }
+        },
+        error: function (data) {
+          alert("服务器请求错误，请重试");
         }
       });
     });
