完成数据统计页面前端 修复session冲突问题

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -118,9 +118,11 @@
 
       </div>
 
-      <div class="content-body" style="padding-left:15vw;">
+      <div class="content-body">
         <!-- Overview -->
-        <div class="card border-grey border-lighten-3 m-0" style="width:50vw;margin-left:20vw">
+        <div class="row">
+          <div class="col-xs-12 col-md-10 col-lg-8 offset-md-1 offset-xs-0 offset-lg-2">
+        <div class="card border-grey">
           <div class="card-header no-border">
             <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>登陆</span></h6>
           </div>
@@ -161,6 +163,8 @@
               <p class="float-sm-right text-xs-center m-0">没有账户? <a class=" text-success card-link" href="register">注册</a></p>
             </div>
           </div>
+        </div>
+        </div>
         </div>
       </div>
     </div>
