--- a/views/manage/editquestionaire.ejs
+++ b/views/manage/editquestionaire.ejs
@@ -162,7 +162,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                  <button type="button" class="btn btn-info" id="createsubmit">确认创建</button>
+                  <button type="button" class="btn btn-info" id="createsubmit" questionaire="<%= id %>">确认创建</button>
                 </div>
               </div><!-- /.modal-content -->
             </div><!-- /.modal -->
@@ -266,7 +266,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                  <button type="button" class="btn btn-info" id="cascadesubmit">确认创建</button>
+                  <button type="button" class="btn btn-info" id="cascadesubmit" questionaire="<%= id %>" > 确认创建</button>
                 </div>
               </div><!-- /.modal-content -->
             </div><!-- /.modal -->
@@ -314,12 +314,16 @@
                       <% for (var i = 0; i < details.length; i++) { %>
                       <div class="form-group">
                         <% if (details[i].ischild == 1) {%>
-                          <% var alert = "[本题为第" + details[i].parentid + "题的子问题]" %>
-                        <% } else if (details[i].ischild == 0) {%>
+                          <% for (var j = 0; j < i; j++) {%>
+                            <% if (details[i].parentid ==  details[j].id) {%>
+                              <% var alert = "[本题为第" + (j+1) + "题的子问题]" %>
+                            <% } %>
+                          <% } %>
+                        <%} else if (details[i].ischild == 0) {%>
                           <% var alert = "" %>
                         <% } %>
                         <% if (details[i].type == 0) {%>
-                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i><%= alert %></i> </label>
+                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i class="text-danger"><%= alert %></i> </label>
                         <div class="input-group" id="<%= details[i].id %>">
                           <label class="display-inline-block custom-control custom-radio ml-1"> 
                             <input type="radio" name="<%= details[i].id %>" name="customer1" value="0"
@@ -339,7 +343,7 @@
                           
                         </div>
                         <% } else if (details[i].type == 1) {%>
-                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i><%= alert %></i></label>
+                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i class="text-danger"><%= alert %></i></label>
                         <div class="input-group" id="<%= details[i].id %>">
                           <% var choice = strip(details[i].description) %>
                           <% for (var m = 0; m < choice.length; m++) { %>
@@ -354,7 +358,7 @@
                         </div>
                         <!-- 多选 -->
                         <% } else if (details[i].type == 2) {%>
-                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i><%= alert %></i> </label>
+                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i class="text-danger"><%= alert %></i> </label>
                         <div class="input-group" id="<%= details[i].id %>">
                           <% var choice = strip(details[i].description) %>
                           <% for (var m = 0; m < choice.length; m++) { %>
@@ -369,28 +373,28 @@
                         </div>
                         <!-- 单行文本 -->
                         <% } else if (details[i].type == 3) {%>
-                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i><%= alert %></i> </label>
+                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i class="text-danger"><%= alert %></i> </label>
                         <input type="text" id="question<%= i+1 %>" class="form-control" placeholder="请输入"
                           name="<%= i+1 %>">
                         <!-- 多行文本 -->
                         <% } else if (details[i].type == 4){ %>
-                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i><%= alert %></i> </label>
+                        <label for="eventInput4"><%= i+1 %>. <%= details[i].title %> &nbsp <i class="text-danger"><%= alert %></i> </label>
                         <br/>
                         <textarea rows="5" type="text" id="question<%= i+1 %>" class="form-control" placeholder="请输入"
                           name="<%= i+1 %>"></textarea>
                         <!-- 数字 -->
                         <% } else if (details[i].type == 5){ %>
-                        <label for="eventInput1"><%= i+1 %>. <%= details[i].title %> &nbsp <i><%= alert %></i></label>
+                        <label for="eventInput1"><%= i+1 %>. <%= details[i].title %> &nbsp <i class="text-danger"><%= alert %></i></label>
                         <input type="number" id="question<%= i+1 %>" class="form-control" placeholder="请输入"
                           name="<%= i+1 %>">
                         <!-- 小数 -->
                         <% } else if (details[i].type == 6){ %>
-                        <label for="eventInput1"><%= i+1 %>. <%= details[i].title %> &nbsp <i><%= alert %></i></label>
+                        <label for="eventInput1"><%= i+1 %>. <%= details[i].title %> &nbsp <i class="text-danger"><%= alert %></i></label>
                         <input type="number" step="<%= details[i].description %>" id="question<%= i+1 %>"
                           class="form-control" placeholder="请输入" name="<%= i+1 %>">
                         <!-- 评分 -->
                         <% } else if (details[i].type == 7){ %>
-                        <label for="eventInput1"><%= i+1 %>. <%= details[i].title %> &nbsp <i><%= alert %></i></label>
+                        <label for="eventInput1"><%= i+1 %>. <%= details[i].title %> &nbsp <i class="text-danger"><%= alert %></i></label>
                         <table class="table table-hover" width="90%" cellspacing="0" cellpadding="2">
                           <tbody>
                             <% for (var j = 1; j <= trans(details[i].description); j++) { %>
@@ -525,6 +529,7 @@
     });
     $("#createsubmit").click(function () {
       let title = $("#title").val();
+      let url = "/manage/newquestion?questionaireid="+$(this).attr("questionaire");
       if (title.length == 0) {
         alert("标题不能为空！");
         return;
@@ -533,7 +538,7 @@
       $.ajax({
         dataType: "JSON",
         data: $('#form1').serialize(),
-        url: "/manage/newquestion",
+        url: url,
         type: "POST",
         success: function (data) {
           if (data.status == 1) {
@@ -551,6 +556,7 @@
     });
     $("#cascadesubmit").click(function () {
       let title = $("#castitle").val();
+      let url = "/manage/cascadequestion?questionaireid="+$(this).attr("questionaire");
       if (title.length == 0) {
         alert("标题不能为空！");
         return;
@@ -559,7 +565,7 @@
       $.ajax({
         dataType: "JSON",
         data: $('#form3').serialize(),
-        url: "/manage/cascadequestion",
+        url: url,
         type: "POST",
         success: function (data) {
           if (data.status == 1) {
