增加数据统计模块管理页面 修改跳转问题 修改页面标题

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -100,7 +100,7 @@
         <li class=" nav-item"><a href="/manage/showlist"><i class="icon-android-menu"></i><span
           data-i18n="" class="menu-title">问卷管理</span></a>
         </li>
-        <li class=" nav-item"><a href="/statistics"><i class="icon-folder3"></i><span data-i18n=""
+        <li class=" nav-item"><a href="/statistics/index"><i class="icon-folder3"></i><span data-i18n=""
                                                                             class="menu-title">数据统计</span></a>
         </li>
       </ul>
