--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -97,7 +97,7 @@
           <ul class="menu-content">
             <li class="active"><a href="account" data-i18n="nav.dash.main" class="menu-item">修改信息</a>
             </li>
-            <li><a href="change_passwd" data-i18n="nav.dash.main" class="menu-item">密码找回</a>
+            <li><a href="change_passwd" data-i18n="nav.dash.main" class="menu-item">密码修改</a>
             </li>
           </ul>
         </li>
@@ -105,7 +105,7 @@
         <li class=" nav-item"><a href="/manage/showlist"><i class="icon-android-menu"></i><span
           data-i18n="" class="menu-title">问卷管理</span></a>
         </li>
-        <li class=" nav-item"><a href="/statistics"><i class="icon-folder3"></i><span data-i18n=""
+        <li class=" nav-item"><a href="/statistics/index"><i class="icon-folder3"></i><span data-i18n=""
                                                                             class="menu-title">数据统计</span></a>
         </li>
       </ul>
