--- a/views/manage/editquestionaire.ejs
+++ b/views/manage/editquestionaire.ejs
@@ -10,7 +10,7 @@
   <meta name="keywords"
     content="admin template, robust admin template, dashboard template, flat admin template, responsive admin template, web app">
   <meta name="author" content="PIXINVENT">
-  <title>问卷管理</title>
+  <title>编辑问卷</title>
   <link rel="apple-touch-icon" sizes="60x60" href="../app-assets/images/ico/apple-icon-60.png">
   <link rel="apple-touch-icon" sizes="76x76" href="../app-assets/images/ico/apple-icon-76.png">
   <link rel="apple-touch-icon" sizes="120x120" href="../app-assets/images/ico/apple-icon-120.png">
@@ -94,7 +94,7 @@
         <li class="active"><a href="/manage/showlist"><i class="icon-folder3"></i><span data-i18n=""
               class="menu-title">问卷管理</span></a>
         </li>
-        <li class="nav-item"><a href="/statistics"><i class="icon-android-menu"></i><span data-i18n=""
+        <li class="nav-item"><a href="/statistics/index"><i class="icon-android-menu"></i><span data-i18n=""
               class="menu-title">数据统计</span></a>
         </li>
       </ul>
